--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -6,7 +6,7 @@
     <title>Admin Dashboard - Hotel Elisabeth Mechelen</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="admin-page">
     <header>
         <nav>
             <h1>Admin Dashboard</h1>
