Comment out fixed background layer in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
     </header>
     
-    <!-- Fixed Background Layer (iOS Compatible) -->
+    <!-- Fixed Background Layer (iOS Compatible) 
     <div id="page-background" class="page-background"></div>
     -->
 
