--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </nav>
     </header>
     
-    <!-- Fixed Background Layer (iOS Compatible) 
+    <!-- Fixed Background Layer (iOS Compatible) -->
     <div id="page-background" class="page-background"></div>
-    -->
+    
 
     <main>
         <section class="hero-slideshow" aria-label="Hotel Elisabeth main banner">
