Add meal options for Breakfast and Dinner

--- a/grouprequest.html
+++ b/grouprequest.html
@@ -424,6 +424,9 @@
                             <option value="Breakfast Only">Breakfast Only</option>
                             <option value="Breakfast and Packed Lunch">Breakfast and Packed Lunch</option>
                             <option value="Packed Lunch Only">Packed Lunch Only</option>
+                            <option value="Breakfast and Dinner">Breakfast and Dinner</option>
+                            <option value="Breakfast, Lunch and Dinner">Breakfast, Lunch and Dinner</option>
+                            <option value="Dinner Only">Dinner Only</option>
                             <option value="We do not require food service">We do not require food service</option>
                         </select>
                     </div>
