Update hero and CTA section taglines

--- a/rooms.html
+++ b/rooms.html
@@ -50,7 +50,7 @@
         <section class="rooms-hero-modern">
             <div class="rooms-hero-overlay"></div>
             <div class="rooms-hero-content">
-                <span class="rooms-hero-tagline">Luxury Accommodations</span>
+                <span class="rooms-hero-tagline">Exclusive Accommodations</span>
                 <h1 class="rooms-hero-title-modern">Discover Your Perfect Stay</h1>
                 <p class="rooms-hero-subtitle-modern">Experience comfort and elegance in every detail</p>
                 <div class="rooms-hero-divider"></div>
@@ -76,7 +76,7 @@
         <section class="rooms-cta">
             <div class="rooms-cta-content">
                 <h2 class="rooms-cta-title">Ready to Book Your Stay?</h2>
-                <p class="rooms-cta-text">Experience the perfect blend of comfort and luxury</p>
+                <p class="rooms-cta-text">Experience the perfect blend of comfort and refinement</p>
                 <div class="booking-bar booking-bar-modal">
                     <div class="booking-field">
                         <label for="checkin-date">Check-in</label>
