Revise intro text for meeting spaces section

--- a/meetings.html
+++ b/meetings.html
@@ -516,7 +516,7 @@
         <section class="meetings-intro">
             <div class="meetings-intro-content">
                 <h2 class="meetings-section-title">Our Meeting Spaces</h2>
-                <p class="meetings-intro-text">Whether you're planning an intimate board meeting, a corporate conference, or a special celebration, Hotel Elisabeth Mechelen offers flexible meeting spaces equipped with modern amenities and professional support.</p>
+                <p class="meetings-intro-text">Whether you're planning an intimate board meeting, a corporate conference, or a special celebration, Hotel Elisabeth Mechelen provides flexible meeting spaces with well-equipped facilities and attentive service.</p>
             </div>
         </section>
 
