--- a/meetings.html
+++ b/meetings.html
@@ -4,32 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meetings & Events - Hotel Elisabeth Mechelen</title>
-    <!-- Preload hero image from cache for instant display -->
-    <script>
-        (function() {
-            var cacheKey = 'cache_meetingsMainImage_Hero';
-            var url = localStorage.getItem(cacheKey);
-            // Validate URL before preloading for security
-            if (url && typeof url === 'string') {
-                var trimmed = url.trim();
-                if (trimmed.startsWith('https://firebasestorage.googleapis.com/') || 
-                    trimmed.startsWith('https://storage.googleapis.com/')) {
-                    var link = document.createElement('link');
-                    link.rel = 'preload';
-                    link.as = 'image';
-                    link.href = trimmed;
-                    document.head.appendChild(link);
-                }
-            }
-        })();
-    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Firebase Storage preconnect for faster image loading -->
-    <link rel="preconnect" href="https://firebasestorage.googleapis.com" crossorigin>
-    <link rel="preconnect" href="https://storage.googleapis.com" crossorigin>
-    <link rel="dns-prefetch" href="https://firebasestorage.googleapis.com">
-    <link rel="dns-prefetch" href="https://storage.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <!-- EmailJS SDK -->
@@ -61,7 +37,6 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #1a1a1a; /* Dark fallback while image loads */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -773,31 +748,16 @@
             return str.replace(/\\/g, '\\\\').replace(/'/g, "\\'").replace(/"/g, '\\"');
         }
 
-        // Load meetings hero image with localStorage caching
+        // Load meetings hero image
         async function loadMeetingsHero() {
-            const heroBg = document.getElementById('meetings-hero-bg');
-            if (!heroBg) return;
-
-            const cacheKey = 'cache_meetingsMainImage_Hero';
-
-            // Instantly apply cached URL (with validation for security)
-            const cached = localStorage.getItem(cacheKey);
-            if (cached) {
-                const safeCached = sanitizeImageUrl(cached);
-                if (safeCached) {
-                    heroBg.style.backgroundImage = `url("${safeCached}")`;
-                }
-            }
-
-            // Fetch fresh URL in background and update if changed
             try {
                 const snapshot = await get(dbRef(database, 'meetingsMainImage'));
                 if (snapshot.exists()) {
                     const hero = snapshot.val();
                     const safeUrl = sanitizeImageUrl(hero?.url || '');
                     if (safeUrl) {
-                        localStorage.setItem(cacheKey, safeUrl);
-                        if (safeUrl !== cached) {
+                        const heroBg = document.getElementById('meetings-hero-bg');
+                        if (heroBg) {
                             heroBg.style.backgroundImage = `url("${safeUrl}")`;
                         }
                     }
